# rss-webhook-trigger

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker.nix  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: docker.yaml  nix.yaml  rust.yml
nix/: module.nix  overlay.nix  package.nix
src/: config.rs  error.rs  fetcher.rs  hub.rs  main.rs
