[package]
name = "rss-webhook-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
rust-version = "1.70.0"
license = "MIT"

[dependencies]
syndication = "0.5.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
secretfile = "0.1.0"
