[package]
name = "rss-webhook-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
rust-version = "1.70.0"
license = "MIT"

[dependencies]
syndication = "0.5.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
secretfile = "0.1.0"
