[package]
name = "rss-webhook-trigger"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
rust-version = "1.71.1"
license = "MIT"

[dependencies]
syndication = "0.5.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
color-eyre = "0.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
time = { version = "0.3.37", features = ["serde", "serde-well-known"] }
secretfile = "0.1.0"
